# Origami

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle  origami.jks
app/release/: output-metadata.json
app/src/androidTest/java/com/ori/origami/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: AMR-WB-16000-1-false.t  AMR-WB-16000-1-true.t  AMR-WB-16000-1.t
app/src/main/cpp/: bitmap_handler.cpp  color_util.cpp  ori_amr_wb.cpp  ori_amr_wb_dec.cpp  ori_audio.cpp  ori_cv.cpp  ori_hyn.cpp  ori_mp.cpp  ori_ppn.cpp  ori_queue.cpp  ori_rtsp.cpp  ori_transcoding.cpp  test.cpp
app/src/main/cpp/include/: color_util.cpp  color_util.h  nlp_ctid_qrdecode.h  ori_amr_wb.h  ori_amr_wb_dec.h  ori_audio.h  ori_hyn.h  ori_mp.h  ori_ppn.h  ori_queue.h  ori_transcoding.h
app/src/main/cpp/include/libavcodec/: avcodec.h
app/src/main/cpp/include/libavformat/: avformat.h  avio.h
app/src/main/cpp/opencore_amr/amrnb/: wrapper.cpp
app/src/main/cpp/opencore_amr/amrnb/common/include/: gsm_amr_typedefs.h  typedef.h
app/src/main/cpp/opencore_amr/amrnb/dec/include/: pvamrnbdecoder_api.h
app/src/main/cpp/opencore_amr/amrnb/dec/src/: amrdecode.h  decoder_gsm_amr.cpp  sp_dec.h
app/src/main/cpp/opencore_amr/amrwb/: wrapper.cpp
app/src/main/cpp/opencore_amr/amrwb/dec/include/: decoder_amr_wb.h  pvamrwbdecoder_api.h
app/src/main/cpp/opencore_amr/amrwb/dec/src/: decoder_amr_wb.cpp  dtx.h  homing_amr_wb_dec.cpp  mime_io.cpp  mime_io.h  pv_amr_wb_type_defs.h  pvamrwbdecoder.cpp  pvamrwbdecoder.h  pvamrwbdecoder_mem_funcs.h  synthesis_amr_wb.cpp
app/src/main/cpp/opencore_amr/common/dec/include/: pvgsmamrdecoderinterface.h
app/src/main/cpp/opencore_amr/oscl/: oscl_base.h
app/src/main/java/com/ori/origami/: ActSameViewTest.java  AudioPlay.java  LaunchActivity.java  NativeBitmap.java  NativeOriPlay.java  NativeRtspPlay.java  Print.java  Test.java  Test2Act.java  TestAct.java  TestActivity.java  Test_recycler.java
app/src/main/java/com/ori/origami/http/: HttpServer.java
app/src/main/java/com/ori/origami/jni/: NativeOriTranscoding.java  OriAmr.java  OriAmrWbDec.java  OriOpenCv.java  OriPPN.java
app/src/main/java/vtb/arisu/mana/annotation/: Info.java  Nya.java  RspType.java  VtbBean.java
app/src/main/java/vtb/arisu/mana/bean/: Define.java  OFLType.java
app/src/main/java/vtb/arisu/mana/bean/report/: Ack_JwAddress.java  Ack_QueryArfcnSelfcfg.java  Ack_QueryBandPowerDerease.java  Ack_QueryCellAutoSet.java  Ack_QueryCellStateInfo.java  Ack_QueryCfg.java  Ack_QueryDwFlowType.java  Ack_QueryFddRedirectInfo.java  Ack_QueryGps.java  Ack_QueryGpsOrBeiDou.java  Ack_QueryGpsPpsls.java  Ack_QueryImsiBlackList.java  Ack_QueryImsiFileCfg.java  Ack_QueryLocationUeBlack.java  Ack_QueryNtpSyncState.java  Ack_QueryRedirectInfo.java  Ack_QueryRxGainPower.java  Ack_QueryRxPower.java  Ack_QueryScanAfrcn.java  Ack_QueryScanSyncPort.java  Ack_QuerySecondaryPlmns.java  Ack_QuerySelectFreqCfg.java  Ack_QueryServingCell.java  Ack_QuerySrsCfg.java  Ack_QuerySyncInfo.java  Ack_QueryTddChildCfgInfo.java  Ack_QueryUeMeasCfg.java  Ack_QueryUeNasRejectCfg.java  Ack_VerLevelUp.java  Ack_WBlist.java  CellStateRpt.java  CfgResult.java  FrqOffsetAdjRpt.java  Heart.java  MeasInfo.java  RemInfoRpt.java  UeInfoRpt.java  WarnRpt.java
app/src/main/java/vtb/arisu/mana/bean/send/: AddDelete_autoCellArfcn.java  Cfg_SelectFreq.java  Cfg_VerLevelUp.java  Cfg_WBList.java  Cfg_autoSetCell.java  Cfg_autoStartWithPower.java  Cfg_bandPowerDEREASE.java  Cfg_cellStatus.java  Cfg_changeCellArgsMod.java  Cfg_dereaseDelta.java  Cfg_dwFlowDyn.java  Cfg_dwFlowType.java  Cfg_dwMEAS.java  Cfg_freqOffsetCheck.java  Cfg_gain.java  Cfg_gpsLossRebootTime.java  Cfg_gpsOrBeiDou.java  Cfg_gpsPps1s.java  Cfg_gpsSoftwareRenovate.java  Cfg_gspFDDReSync.java  Cfg_jwAddressReset.java  Cfg_locBlackList.java  Cfg_msg4PowerBoost.java  Cfg_ntpServerIp.java  Cfg_openIMEIGet.java  Cfg_powerControlALPHA.java  Cfg_reDirectionFDD.java  Cfg_reboot.java  Cfg_rebootAtTime.java  Cfg_scanArfcn.java  Cfg_scanPort.java  (+47 more)
app/src/main/java/vtb/arisu/mana/connect/: MANAListener.java  PacketHandler.java  TCP.java
app/src/main/java/vtb/mashiro/kanon/: Aria.java  Suki.java
app/src/main/java/vtb/mashiro/kanon/base/: Bean.java  CameraHelper.java  Packet.java
app/src/main/java/vtb/mashiro/kanon/os/: Handler.java  Looper.java  Message.java
app/src/main/java/vtb/mashiro/kanon/util/: ByteUtil.java  ClassToAndroid.java  DefMap.java  Fun.java  Funichi.java  Log.java  Mana.java  TextUtils.java  WaitConcurrentQueue.java
app/src/main/res/layout/: act_same_view_test.xml  act_test.xml  activity_launch.xml  activity_recycler_test.xml  activity_test.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/ori/origami/: ExampleUnitTest.java
(+177 files in other folders)
